Enhance reflection access for Guice in RuneLiteCustomLauncher and update AutomationOverlay for improved button functionality